--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -282,8 +282,14 @@
   &_content {
     margin-top: 70px;
     display: flex;
+    @include m.mq(sp) {
+      flex-direction: column;
+    }
     &_map {
       width: 50%;
+      @include m.mq(sp) {
+        width: 100%;
+      }
       iframe {
         width: 100%;
         aspect-ratio: 3/2;
@@ -294,12 +300,20 @@
       flex-direction: column;
       justify-content: space-around;
       margin: 1% 0 1% 7%;
+      @include m.mq(sp) {
+        margin: 3% 0 0 0;
+      }
       &_txt {
         font-size: 1.7rem;
         color: $color-text-green;
         line-height: 3.4rem;
         padding: 20px 25px;
         border-left: 3px solid $color-green;
+        @include m.mq(sp) {
+          &:not(:first-child) {
+            margin-top: 10px;
+          }
+        }
       }
     }
   }
