--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -77,7 +77,7 @@ a {
 
 /*---------- header ----------*/
 .header {
-  z-index: 5;
+  z-index: 999999;
   background: rgba(255, 255, 255, 0.75);
   padding: 0 30px;
   width: 100vw;
@@ -442,7 +442,59 @@ a {
   left: 50%;
   top: -30px;
   z-index: -2;
-  box-shadow: 0 0 5px 3px #eee;
+}
+
+/*---------- footer ----------*/
+.footer {
+  position: relative;
+  width: 100vw;
+  height: 260px;
+  margin-top: 85px;
+  background: #1b5d00;
+  display: flex;
+}
+@media screen and (max-width: 768px) {
+  .footer {
+    margin-top: 75px;
+  }
+}
+.footer_logo {
+  background: #eafced;
+  width: 30%;
+  height: 100%;
+}
+.footer_logo img {
+  width: 70%;
+  object-fit: contain;
+}
+.footer_info {
+  padding: 30px 0;
+  width: 55%;
+  display: flex;
+  justify-content: space-around;
+  font-size: 1.5rem;
+}
+.footer_info_list li {
+  color: #fff;
+}
+.footer_info_list .head {
+  list-style: none;
+  margin-bottom: 15px;
+}
+.footer_info_list .head a {
+  border-bottom: 1px solid #fff;
+}
+.footer_info_list a {
+  color: #fff;
+}
+.footer_place {
+  position: absolute;
+  color: #fff;
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  right: 15px;
+  bottom: 15px;
 }
 
 /*---------- know ----------*/
