--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -212,6 +212,9 @@ a {
       list-style-type: none;
       font-size: 3rem;
       font-weight: bold;
+      @include m.mq(sp) {
+        font-size: 2.5rem;
+      }
       &:not(:first-child) {
         margin-top: 50px;
       }
@@ -442,7 +445,7 @@ a {
     @include m.mq(sp) {
       flex-direction: column;
       width: 100%;
-      padding: 30px 15px;
+      padding: 30px 15px 150px 15px;
     }
     &_list {
       @include m.mq(sp) {
