--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -552,11 +552,20 @@ a {
   height: auto;
 }
 .hospital_info_content {
-  width: 100%;
+  position: relative;
+  width: 80%;
+  min-height: 850px;
+  margin: 0 auto;
   aspect-ratio: 3/2;
   background-image: url("../../img/hospital_page_info.jpg");
   background-position: center;
   background-size: cover;
+}
+.hospital_info_content_arrow {
+  padding-top: 25px;
+}
+.hospital_info_content_arrow div:not(:first-child) {
+  padding-top: 10px;
 }
 .hospital_info_content_arrow_title {
   position: relative;
@@ -579,6 +588,65 @@ a {
   border-bottom: 68px solid transparent;
   border-left: 100px solid #268e00;
   border-right: 0;
+}
+.hospital_info_content_arrow_subtitle {
+  position: relative;
+  display: inline-block;
+  padding: 20px 35px;
+  background: #1b5d00;
+  font-size: 3rem;
+  color: #fff;
+  font-weight: bold;
+}
+.hospital_info_content_arrow_subtitle::after {
+  position: absolute;
+  right: -73px;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-top: 43px solid transparent;
+  border-bottom: 43px solid transparent;
+  border-left: 74px solid #1b5d00;
+  border-right: 0;
+  content: "";
+}
+.hospital_info_content .circle_wrapper {
+  position: absolute;
+  bottom: 10%;
+  left: 5%;
+}
+.hospital_info_content_circle {
+  width: 350px;
+  height: 350px;
+  position: relative;
+  bottom: 0;
+  color: #4f6a20;
+  z-index: 1;
+}
+.hospital_info_content_circle::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.7);
+  filter: blur(2px);
+  z-index: -1;
+}
+.hospital_info_content_circle h3 {
+  margin-bottom: 10%;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  background: linear-gradient(transparent 60%, rgba(152, 255, 55, 0.6235294118) 60%);
+}
+.hospital_info_content_circle p {
+  font-size: 1.7rem;
+  line-height: 4rem;
+  text-align: center;
 }
 
 /*---------- know ----------*/
