--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -502,12 +502,23 @@ a {
   width: 100vw;
   height: auto;
   &_content {
-    width: 100%;
+    position: relative;
+    width: 80%;
+    min-height: 850px;
+    margin: 0 auto;
     aspect-ratio: 3/2;
     background-image: url("../../img/hospital_page_info.jpg");
     background-position: center;
     background-size: cover;
+    @include m.mq(tab) {
+    }
     &_arrow {
+      padding-top: 25px;
+      div {
+        &:not(:first-child) {
+          padding-top: 10px;
+        }
+      }
       &_title {
         position: relative;
         display: inline-block;
@@ -529,6 +540,65 @@ a {
           border-left: 100px solid $color-green;
           border-right: 0;
         }
+      }
+      &_subtitle {
+        position: relative;
+        display: inline-block;
+        padding: 20px 35px;
+        background: $color-deep-green;
+        font-size: 3rem;
+        color: #fff;
+        font-weight: bold;
+        &::after {
+          position: absolute;
+          right: -73px;
+          top: 0;
+          width: 0;
+          height: 0;
+          border-style: solid;
+          border-top: 43px solid transparent;
+          border-bottom: 43px solid transparent;
+          border-left: 74px solid $color-deep-green;
+          border-right: 0;
+          content: "";
+        }
+      }
+    }
+    .circle_wrapper {
+      position: absolute;
+      bottom: 10%;
+      left: 5%;
+    }
+    &_circle {
+      width: 350px;
+      height: 350px;
+      position: relative;
+      bottom: 0;
+      color: $color-text-green;
+      z-index: 1;
+      &::after {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background: rgba(255, 255, 255, 0.7);
+        filter: blur(2px);
+        z-index: -1;
+      }
+      h3 {
+        margin-bottom: 10%;
+        font-size: 2.5rem;
+        font-weight: bold;
+        text-align: center;
+        background: linear-gradient(transparent 60%, #98ff379f 60%);
+      }
+      p {
+        font-size: 1.7rem;
+        line-height: 4rem;
+        text-align: center;
       }
     }
   }
