--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -547,174 +547,6 @@ a {
   }
 }
 
-.hospital_info {
-  width: 100vw;
-  height: auto;
-}
-.hospital_info_content {
-  position: relative;
-  width: 80%;
-  min-height: 850px;
-  margin: 0 auto;
-  aspect-ratio: 3/2;
-  background-image: url("../../img/hospital_page_info.jpg");
-  background-position: center;
-  background-size: cover;
-}
-@media screen and (max-width: 1024px) {
-  .hospital_info_content {
-    width: 95%;
-  }
-}
-@media screen and (max-width: 768px) {
-  .hospital_info_content {
-    background-position: 75% center;
-    width: 100%;
-  }
-}
-.hospital_info_content_arrow {
-  padding-top: 25px;
-}
-.hospital_info_content_arrow div:not(:first-child) {
-  padding-top: 10px;
-}
-@media screen and (max-width: 768px) {
-  .hospital_info_content_arrow {
-    overflow-x: hidden;
-  }
-}
-.hospital_info_content_arrow_title {
-  position: relative;
-  display: inline-block;
-  background: #268e00;
-  padding: 30px 50px;
-  font-size: 5rem;
-  color: #fff;
-  font-weight: bold;
-}
-@media screen and (max-width: 1024px) {
-  .hospital_info_content_arrow_title {
-    font-size: 2.7rem;
-    padding: 30px 0;
-  }
-}
-.hospital_info_content_arrow_title::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  right: -99px;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-top: 68px solid transparent;
-  border-bottom: 68px solid transparent;
-  border-left: 100px solid #268e00;
-  border-right: 0;
-}
-@media screen and (max-width: 1024px) {
-  .hospital_info_content_arrow_title::after {
-    right: -29px;
-    border-top: 50px solid transparent;
-    border-bottom: 50px solid transparent;
-    border-left: 30px solid #268e00;
-  }
-}
-.hospital_info_content_arrow_subtitle {
-  position: relative;
-  display: inline-block;
-  padding: 20px 35px;
-  background: #1b5d00;
-  font-size: 3rem;
-  color: #fff;
-  font-weight: bold;
-}
-@media screen and (max-width: 1024px) {
-  .hospital_info_content_arrow_subtitle {
-    font-size: 2rem;
-    padding: 20px 15px;
-  }
-}
-.hospital_info_content_arrow_subtitle::after {
-  position: absolute;
-  right: -73px;
-  top: 0;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-top: 43px solid transparent;
-  border-bottom: 43px solid transparent;
-  border-left: 74px solid #1b5d00;
-  border-right: 0;
-  content: "";
-}
-@media screen and (max-width: 1024px) {
-  .hospital_info_content_arrow_subtitle::after {
-    right: -19px;
-    border-top: 35px solid transparent;
-    border-bottom: 35px solid transparent;
-    border-left: 20px solid #1b5d00;
-  }
-}
-.hospital_info_content .circle_wrapper {
-  position: absolute;
-  bottom: 10%;
-  left: 5%;
-}
-@media screen and (max-width: 768px) {
-  .hospital_info_content .circle_wrapper {
-    bottom: 5%;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-}
-.hospital_info_content_circle {
-  width: 350px;
-  height: 350px;
-  position: relative;
-  bottom: 0;
-  color: #4f6a20;
-  z-index: 1;
-}
-@media screen and (max-width: 768px) {
-  .hospital_info_content_circle {
-    width: 95vw;
-    height: 95vw;
-    max-width: 330px;
-    max-height: 330px;
-    min-width: 280px;
-    min-height: 280px;
-  }
-}
-.hospital_info_content_circle::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.7);
-  filter: blur(2px);
-  z-index: -1;
-}
-.hospital_info_content_circle h3 {
-  margin-bottom: 10%;
-  font-size: 2.5rem;
-  font-weight: bold;
-  text-align: center;
-  background: linear-gradient(transparent 60%, rgba(152, 255, 55, 0.6235294118) 60%);
-}
-.hospital_info_content_circle p {
-  font-size: 1.7rem;
-  line-height: 4rem;
-  text-align: center;
-}
-@media screen and (max-width: 768px) {
-  .hospital_info_content_circle p {
-    font-size: 1.5rem;
-  }
-}
-
 /*---------- know ----------*/
 .know_content {
   display: flex;
@@ -1017,4 +849,226 @@ a {
   .access_content_info_txt:not(:first-child) {
     margin-top: 10px;
   }
+}
+
+/*---------- hospital ----------*/
+.hospital_info {
+  width: 100vw;
+  height: auto;
+}
+.hospital_info_content {
+  position: relative;
+  width: 80%;
+  min-height: 850px;
+  margin: 0 auto;
+  aspect-ratio: 3/2;
+  background-image: url("../../img/hospital_page_info.jpg");
+  background-position: center;
+  background-size: cover;
+}
+@media screen and (max-width: 1024px) {
+  .hospital_info_content {
+    width: 95%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .hospital_info_content {
+    background-position: 75% center;
+    width: 100%;
+  }
+}
+.hospital_info_content_arrow {
+  padding-top: 25px;
+}
+.hospital_info_content_arrow div:not(:first-child) {
+  padding-top: 10px;
+}
+@media screen and (max-width: 768px) {
+  .hospital_info_content_arrow {
+    overflow-x: hidden;
+  }
+}
+.hospital_info_content_arrow_title {
+  position: relative;
+  display: inline-block;
+  background: #268e00;
+  padding: 30px 50px;
+  font-size: 5rem;
+  color: #fff;
+  font-weight: bold;
+}
+@media screen and (max-width: 1024px) {
+  .hospital_info_content_arrow_title {
+    font-size: 2.7rem;
+    padding: 30px 0;
+  }
+}
+.hospital_info_content_arrow_title::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: -99px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-top: 68px solid transparent;
+  border-bottom: 68px solid transparent;
+  border-left: 100px solid #268e00;
+  border-right: 0;
+}
+@media screen and (max-width: 1024px) {
+  .hospital_info_content_arrow_title::after {
+    right: -29px;
+    border-top: 50px solid transparent;
+    border-bottom: 50px solid transparent;
+    border-left: 30px solid #268e00;
+  }
+}
+.hospital_info_content_arrow_subtitle {
+  position: relative;
+  display: inline-block;
+  padding: 20px 35px;
+  background: #1b5d00;
+  font-size: 3rem;
+  color: #fff;
+  font-weight: bold;
+}
+@media screen and (max-width: 1024px) {
+  .hospital_info_content_arrow_subtitle {
+    font-size: 2rem;
+    padding: 20px 15px;
+  }
+}
+.hospital_info_content_arrow_subtitle::after {
+  position: absolute;
+  right: -73px;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-top: 43px solid transparent;
+  border-bottom: 43px solid transparent;
+  border-left: 74px solid #1b5d00;
+  border-right: 0;
+  content: "";
+}
+@media screen and (max-width: 1024px) {
+  .hospital_info_content_arrow_subtitle::after {
+    right: -19px;
+    border-top: 35px solid transparent;
+    border-bottom: 35px solid transparent;
+    border-left: 20px solid #1b5d00;
+  }
+}
+.hospital_info_content .circle_wrapper {
+  position: absolute;
+  bottom: 10%;
+  left: 5%;
+}
+@media screen and (max-width: 768px) {
+  .hospital_info_content .circle_wrapper {
+    bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+.hospital_info_content_circle {
+  width: 350px;
+  height: 350px;
+  position: relative;
+  bottom: 0;
+  color: #4f6a20;
+  z-index: 1;
+}
+@media screen and (max-width: 768px) {
+  .hospital_info_content_circle {
+    width: 95vw;
+    height: 95vw;
+    max-width: 330px;
+    max-height: 330px;
+    min-width: 280px;
+    min-height: 280px;
+  }
+}
+.hospital_info_content_circle::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.7);
+  filter: blur(2px);
+  z-index: -1;
+}
+.hospital_info_content_circle h3 {
+  margin-bottom: 10%;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  background: linear-gradient(transparent 60%, rgba(152, 255, 55, 0.6235294118) 60%);
+}
+.hospital_info_content_circle p {
+  font-size: 1.7rem;
+  line-height: 4rem;
+  text-align: center;
+}
+@media screen and (max-width: 768px) {
+  .hospital_info_content_circle p {
+    font-size: 1.5rem;
+  }
+}
+
+.doctor_content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.doctor_content_human {
+  width: 25%;
+}
+.doctor_content_human_img {
+  width: 95%;
+  height: auto;
+  aspect-ratio: 5/6;
+}
+.doctor_content_human_img img {
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
+}
+.doctor_content_name {
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 10px;
+}
+.doctor_content_name span {
+  font-size: 1.7rem;
+  padding-right: 1.7rem;
+}
+.doctor_content_txt {
+  width: 70%;
+  padding: 30px;
+  background: #f8f8f8;
+  border-radius: 10px;
+  box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.0862745098);
+}
+.doctor_content_txt h3 {
+  color: #4f6a20;
+  font-size: 2rem;
+  border-bottom: 1px solid #4f6a20;
+}
+.doctor_content_txt p {
+  letter-spacing: 0.05em;
+  line-height: 3rem;
+  color: #000;
+  font-size: 1.7rem;
+}
+.doctor_content_txt_one:last-child {
+  margin-top: 20px;
 }/*# sourceMappingURL=style.css.map */
