--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -327,3 +327,209 @@
     }
   }
 }
+/*---------- hospital ----------*/
+.hospital_info {
+  width: 100vw;
+  height: auto;
+  &_content {
+    position: relative;
+    width: 80%;
+    min-height: 850px;
+    margin: 0 auto;
+    aspect-ratio: 3/2;
+    background-image: url("../../img/hospital_page_info.jpg");
+    background-position: center;
+    background-size: cover;
+    @include m.mq(tab) {
+      width: 95%;
+    }
+    @include m.mq(sp) {
+      background-position: 75% center;
+      width: 100%;
+    }
+    &_arrow {
+      padding-top: 25px;
+      div {
+        &:not(:first-child) {
+          padding-top: 10px;
+        }
+      }
+      @include m.mq(sp) {
+        overflow-x: hidden;
+      }
+      &_title {
+        position: relative;
+        display: inline-block;
+        background: $color-green;
+        padding: 30px 50px;
+        font-size: 5rem;
+        color: #fff;
+        font-weight: bold;
+        @include m.mq(tab) {
+          font-size: 2.7rem;
+          padding: 30px 0;
+        }
+        &::after {
+          position: absolute;
+          content: "";
+          top: 0;
+          right: -99px;
+          width: 0;
+          height: 0;
+          border-style: solid;
+          border-top: 68px solid transparent;
+          border-bottom: 68px solid transparent;
+          border-left: 100px solid $color-green;
+          border-right: 0;
+          @include m.mq(tab) {
+            right: -29px;
+            border-top: 50px solid transparent;
+            border-bottom: 50px solid transparent;
+            border-left: 30px solid $color-green;
+          }
+        }
+      }
+      &_subtitle {
+        position: relative;
+        display: inline-block;
+        padding: 20px 35px;
+        background: $color-deep-green;
+        font-size: 3rem;
+        color: #fff;
+        font-weight: bold;
+        @include m.mq(tab) {
+          font-size: 2rem;
+          padding: 20px 15px;
+        }
+        &::after {
+          position: absolute;
+          right: -73px;
+          top: 0;
+          width: 0;
+          height: 0;
+          border-style: solid;
+          border-top: 43px solid transparent;
+          border-bottom: 43px solid transparent;
+          border-left: 74px solid $color-deep-green;
+          border-right: 0;
+          content: "";
+          @include m.mq(tab) {
+            right: -19px;
+            border-top: 35px solid transparent;
+            border-bottom: 35px solid transparent;
+            border-left: 20px solid $color-deep-green;
+          }
+        }
+      }
+    }
+    .circle_wrapper {
+      position: absolute;
+      bottom: 10%;
+      left: 5%;
+      @include m.mq(sp) {
+        bottom: 5%;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+    }
+    &_circle {
+      width: 350px;
+      height: 350px;
+      position: relative;
+      bottom: 0;
+      color: $color-text-green;
+      z-index: 1;
+      @include m.mq(sp) {
+        width: 95vw;
+        height: 95vw;
+        max-width: 330px;
+        max-height: 330px;
+        min-width: 280px;
+        min-height: 280px;
+      }
+      &::after {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background: rgba(255, 255, 255, 0.7);
+        filter: blur(2px);
+        z-index: -1;
+      }
+      h3 {
+        margin-bottom: 10%;
+        font-size: 2.5rem;
+        font-weight: bold;
+        text-align: center;
+        background: linear-gradient(transparent 60%, #98ff379f 60%);
+      }
+      p {
+        font-size: 1.7rem;
+        line-height: 4rem;
+        text-align: center;
+        @include m.mq(sp) {
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }
+}
+.doctor {
+  &_content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    &_human {
+      width: 25%;
+      &_img {
+        width: 95%;
+        height: auto;
+        aspect-ratio: 5/6;
+        img {
+          border-radius: 5px;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: top;
+        }
+      }
+    }
+    &_name {
+      font-weight: bold;
+      font-size: 2rem;
+      text-align: center;
+      margin-top: 10px;
+      span {
+        font-size: 1.7rem;
+        padding-right: 1.7rem;
+      }
+    }
+    &_txt {
+      width: 70%;
+      padding: 30px;
+      background: $color-grey;
+      border-radius: 10px;
+      box-shadow: 5px 5px 1px #00000016;
+      h3 {
+        color: $color-text-green;
+        font-size: 2rem;
+        border-bottom: 1px solid $color-text-green;
+      }
+      p {
+        letter-spacing: 0.05em;
+        line-height: 3rem;
+        color: #000;
+        font-size: 1.7rem;
+      }
+      &_one {
+        &:last-child {
+          margin-top: 20px;
+        }
+      }
+    }
+  }
+}
