--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -84,6 +84,14 @@ a {
   &_img {
     width: auto;
     height: 80%;
+    position: relative;
+    a {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
     img {
       width: auto;
       height: 100%;
