--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -233,6 +233,9 @@ a {
   }
 }
 /*---------- hero ----------*/
+.sub_hero {
+  margin-bottom: 100px;
+}
 .hero {
   width: 100vw;
   height: calc(100vh + 15px);
@@ -242,6 +245,7 @@ a {
   background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
+  margin-bottom: 100px;
   &::after {
     content: "";
     position: absolute;
