--- a/wp-content/themes/YAMATAKA/src/css/style.css
+++ b/wp-content/themes/YAMATAKA/src/css/style.css
@@ -1230,4 +1230,79 @@ a {
 .department_content_one_info_main {
   margin-top: 30px;
   font-size: 1.7rem;
+}
+
+/*---------- news page ----------*/
+.newspage_content_menu {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-left: 20px;
+}
+.newspage_content_menu a {
+  border-radius: 10px 10px 0 0;
+  padding: 17px 0;
+  background: #1b5d00;
+  display: inline-block;
+  width: 300px;
+  text-align: center;
+  color: #fff;
+}
+.newspage_content_menu .none {
+  opacity: 0.7;
+}
+.newspage_content_main {
+  padding: 100px;
+  border-radius: 20px;
+  border: 3px solid #1b5d00;
+}
+.newspage_content_main_list li {
+  position: relative;
+  padding: 28px 0 28px 2%;
+  border-top: 1px solid #4f6a20;
+  display: flex;
+  align-items: center;
+  color: #4f6a20;
+  font-size: 1.7rem;
+  transition: all 0.2s;
+}
+.newspage_content_main_list li:last-child {
+  border-bottom: 1px solid #4f6a20;
+}
+.newspage_content_main_list li:hover {
+  opacity: 0.8;
+}
+@media screen and (max-width: 768px) {
+  .newspage_content_main_list li {
+    padding: 20px 0 20px 2%;
+    flex-wrap: wrap;
+  }
+}
+.newspage_content_main_list li a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.newspage_content_main_list .news_list_tag {
+  font-size: 1.4rem;
+  padding: 4px 6px;
+  color: #fff;
+  border-radius: 10px;
+  background: #268e00;
+  margin: 0 20px;
+}
+
+.nav-links {
+  margin-top: 50px;
+  font-size: 2rem;
+  text-align: center;
+}
+.nav-links .current {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-right: 10px;
+}
+.nav-links .page-numbers {
+  margin-right: 10px;
 }/*# sourceMappingURL=style.css.map */
