--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -665,3 +665,81 @@
     }
   }
 }
+/*---------- news page ----------*/
+.newspage {
+  &_content {
+    &_menu {
+      font-size: 2.5rem;
+      font-weight: bold;
+      margin-left: 20px;
+      a {
+        border-radius: 10px 10px 0 0;
+        padding: 17px 0;
+        background: $color-deep-green;
+        display: inline-block;
+        width: 300px;
+        text-align: center;
+        color: #fff;
+      }
+      .none {
+        opacity: 0.7;
+      }
+    }
+    &_main {
+      padding: 100px;
+      border-radius: 20px;
+      border: 3px solid $color-deep-green;
+      &_list {
+        li {
+          position: relative;
+          padding: 28px 0 28px 2%;
+          border-top: 1px solid $color-text-green;
+          display: flex;
+          align-items: center;
+          color: $color-text-green;
+          font-size: 1.7rem;
+          transition: all 0.2s;
+          &:last-child {
+            border-bottom: 1px solid $color-text-green;
+          }
+          &:hover {
+            opacity: 0.8;
+          }
+          @include m.mq(sp) {
+            padding: 20px 0 20px 2%;
+            flex-wrap: wrap;
+          }
+          a {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+          }
+        }
+        .news_list_tag {
+          font-size: 1.4rem;
+          padding: 4px 6px;
+          color: #fff;
+          border-radius: 10px;
+          background: $color-green;
+          margin: 0 20px;
+        }
+      }
+    }
+  }
+}
+//pagination
+.nav-links {
+  margin-top: 50px;
+  font-size: 2rem;
+  text-align: center;
+  .current {
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-right: 10px;
+  }
+  .page-numbers {
+    margin-right: 10px;
+  }
+}
