--- a/wp-content/themes/YAMATAKA/src/scss/_main.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_main.scss
@@ -259,18 +259,31 @@
             padding-top: 100px;
           }
           li {
+            position: relative;
             padding: 28px 0 28px 2%;
             border-top: 1px solid $color-text-green;
             display: flex;
             align-items: center;
             color: $color-text-green;
             font-size: 1.7rem;
+            transition: all 0.2s;
+
             &:last-child {
               border-bottom: 1px solid $color-text-green;
+            }
+            &:hover {
+              opacity: 0.8;
             }
             @include m.mq(sp) {
               padding: 20px 0 20px 2%;
               flex-wrap: wrap;
+            }
+            a {
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              top: 0;
+              left: 0;
             }
           }
           &_tag {
@@ -695,6 +708,10 @@
       }
       .none {
         opacity: 0.7;
+        transition: all 0.2s;
+        &:hover {
+          opacity: 1;
+        }
       }
     }
     &_main {
