--- a/wp-content/themes/YAMATAKA/src/scss/_set.scss
+++ b/wp-content/themes/YAMATAKA/src/scss/_set.scss
@@ -12,6 +12,9 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+.front_body {
+  display: none;
+}
 a {
   text-decoration: none;
   color: $color-text-green;
@@ -397,7 +400,6 @@ a {
   color: $color-text-green;
   font-size: 3.7rem;
   z-index: 10;
-  text-shadow: 0 0 10px 3px #eee;
   @include m.mq(sp) {
     font-size: 3rem;
   }
@@ -407,7 +409,7 @@ a {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: #fff;
+    background: $color-sub-green;
     left: 50%;
     top: -20px;
     z-index: -1;
